# rule-based-retrieval

./: .flake8  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENCE.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: main.yml
api/: index.html
docs/: api.md  index.md  installation.md  milvus.md  pinecone.md  tutorial.md
examples/: create_index.py  demo.ipynb  milvus_tutorial.py  querying.py
examples/qdrant/: create_collection.py  query.py
installation/: index.html
milvus/: index.html
pinecone/: index.html
search/: search_index.json
src/whyhow/: __init__.py  embedding.py  processing.py  rag.py
src/whyhow_rbr/: __init__.py  embedding.py  exceptions.py  rag.py  rag_milvus.py  rag_qdrant.py
tests/: conftest.py  test_embedding.py  test_processing.py  test_qdrant_rag.py  test_rag.py
tutorial/: index.html
