[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "rule-based-retrieval"
authors = [{name = "Tom Smoker"}]
description = "Python package for Rule-based Retrieval using RAG"
keywords = ["retrieval", "RAG", "Pinecone", "openai", "LLM"]
classifiers = ["Programming Language :: Python :: 3"]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "langchain_core",
    "langchain_community",
    "langchain_openai",
    "langchain_text_splitters",
    "openai>=1",
    "pinecone-client",
    "pydantic>1",
    "pypdf",
    "tiktoken",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://whyhow.ai"
Documentation = "https://whyhow-ai.github.io/rule-based-retrieval/" 
"Issue Tracker" = "https://github.com/whyhow-ai/rule-based-retrieval/issues" 


[project.optional-dependencies]
dev = [
    "bandit[toml]",
    "black",
    "flake8",
    "flake8-docstrings",
    "fpdf",
    "isort",
    "mypy",
    "pydocstyle[toml]",
    "pytest-cov",
    "pytest",
]
docs = [
    "mkdocs",
    "mkdocstrings[python]",
    "mkdocs-material",
    "pymdown-extensions",
]

[project.scripts]

[tool.setuptools]
zip-safe = false
include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools.package-data]
"*" = ["*.txt", "*.rst", "*.typed"]

[tool.setuptools.dynamic]
version = {attr = "whyhow.__version__"}

[tool.pydocstyle]
convention = "numpy"
add-ignore = "D301"

[tool.bandit]

[tool.black]
line-length = 79
preview = true

[tool.isort]
profile = "black"
line_length = 79

[tool.mypy]
plugins = [
  "pydantic.mypy"
]
python_version = "3.10"
ignore_missing_imports = true
no_implicit_optional = true
check_untyped_defs = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
filterwarnings = [
    "error"
]
testpaths = [
    "tests",
]
addopts = "--cov=src/ -v --cov-report=term-missing --durations=20"
log_cli = false
